css/style.css
html, body {
    height: 100%;
    padding-top: 0px;
    padding-bottom: 0px;
    min-width: 700px;
    overflow: hidden;
    transition: background 1.5s linear;
}

.border-10 {
    border-width: 10px !important;
}

@font-face {
    font-family: 'Material Icons Two Tone';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons Two Tone'),
    local('MaterialIconsTwoTone-Regular'),
    url(../fonts/MaterialIconsTwoTone-Regular.woff2) format('woff2')
}

.material-icons-two-tone {
    font-family: 'Material Icons Two Tone';
    font-weight: normal;
    font-style: normal;
    font-size: 28px; /* Preferred icon size */
    font-display: block;
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    vertical-align: top;
    direction: ltr;
    padding-bottom: 0px;
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
}

.navbar {
    z-index: 5;
}

#spectrogram {
    position: absolute;
    width: 100%;
}

/*#fileNotLoaded {*/
/*    position: relative;*/
/*    font-size: calc(100% + 4vw);*/
/*    z-index: 0;*/
/*    width: 100%;*/
/*    text-align: center;*/
/*}*/


tr[id^="sub"] {
    font-size: 12px;
}

span[id^="filename_"] {
    border-bottom: 1px;
    border-bottom: #818182;
    left: 25px;
    z-index: 2;
}

.rotate {
    -moz-transition: all 0.2s linear;
    -webkit-transition: all 0.2s linear;
    transition: all 0.2s linear;
    cursor: pointer;
}

.rotate.down {
    transform: rotate(180deg);
}

.filename {
    margin-left: auto;
    margin-right: auto;
}

.pointer {
    cursor: pointer;
}

#controlsWrapper .row, #transport-controls {
    min-width: 850px;
    white-space: nowrap;
    height: 40px;
    z-index: 9;
}


div#contentWrapper {
    background: #dbe2ed url(../img/Redwing-flight.png);
    background-size: cover;
    position: absolute;
    top: 66px;
    width: 100%;
}

.zoom {
    font-size: 36px;
}

.species-selector {
    position: relative;
}

.input:not(.form-control) {
    background-image: url('searchicon.png'); /* Add a search icon to input */
    background-position: 10px 12px; /* Position the search icon */
    background-repeat: no-repeat; /* Do not repeat the icon image */
    width: 100%; /* Fixed-width */
    font-size: 16px; /* Increase font-size */
    padding: 12px 20px 12px 40px; /* Add some padding */
    border: 1px solid #ddd; /* Add a grey border */
    margin-bottom: 3px; /* Add some space below the input */
}


ul {
    /* Remove default list styling */
    list-style-type: none;
    padding: 0;
    margin: 0;

}

.bird-list-wrapper {
    overflow: auto;
    max-height: 250px;
    position: absolute;
    width: 100%;
    z-index: 10;
}

.bird-list li a {
    border: 1px solid #ddd; /* Add a border to all links */
    margin-top: -1px; /* Prevent double borders */
    background-color: #f6f6f6; /* Grey background color */
    padding: 10px; /* Add some padding */
    text-decoration: none; /* Remove default text underline */
    font-size: 14px; /* Increase the font-size */
    color: black; /* Add a black text color */
    display: block; /* Make it into a block element to fill the whole list */
}

.bird-list li a:hover:not(.header) {
    background-color: #eee; /* Add a hover effect to all links, except for headers */
}

/* make dropdown stick to row */
.table-active {
    overflow: visible;
    position: relative
}


#results > thead, #results > th, #resultSummary > thead, #resultSummary > th {
    position: sticky;
    top: 0;
    color: white;
    background-color: #1b1e21;
    z-index: 2;
}

region.wavesurfer-region:before {
    content: attr(data-region-label);
    position: absolute;
    color: beige;
    background-color: rgba(266, 255, 236, 0.0);
    top: 0;
    padding-left: 5px;
}

region.wavesurfer-region[data-region-highlight] {
    border: 1px solid rgb(86, 180, 239);
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 2px 0px 8px rgba(266, 255, 236, 0.6);
}

.nighttime {
    background-color: rgba(0, 0, 72, 0.2);
}

.daytime {
    background-color: rgba(86, 180, 239, 0.2);
}

.strikethrough {
    text-decoration: line-through;
}

.table {
    margin-bottom: 0px;
}

/* Disable blue selection highlight in drag */
:not(input):not(textarea),
:not(input):not(textarea)::after,
:not(input):not(textarea)::before {
    user-select: none;
    /*cursor: default; */
}


.chart-outer {
    height: 520px;
    margin: 0em 1em 1em;
    width: 100%;
    display: flex;
}

#chart-week {
    margin: 0em 1em 1em;
    height: 520px;
    width: 100%;
    display: flex;
    order: 1;
    margin-top: 30px;
}

.highcharts-data-table table {
    margin: 0em 1em 1em;
    display: block;
    max-width: 280px;
    overflow: auto;
}


.highcharts-data-table caption {
    display: none;
}

.highcharts-data-table th {
    font-weight: 600;
    padding: 0.5em;
}

.highcharts-data-table td,
.highcharts-data-table th,
.highcharts-data-table caption {
    padding: 0.5em;
}

.highcharts-data-table thead tr,
.highcharts-data-table tr:nth-child(even) {
    background: #f8f8f8;
}

.highcharts-data-table tr:hover {
    background: #f1f7ff;
}

.highcharts-background {
    opacity: 0.75;
}


/* Scrollbar */

/* width */
::-webkit-scrollbar {
    width: 0.5em;
    height: 0.5em;
}

/* Track */
::-webkit-scrollbar-track {
    border-radius: 0.25em;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: slategray;
    border-radius: 0.25em;
}


footer {
    position: fixed;
    bottom: 0;
    height: 30px;
    text-align: center;
    width: 100%;
    z-index: 1000;
}

/* round table borders

.rounded-border{
    border-radius: 10px;
    margin-top: 1px;
    overflow: hidden;
}
*/

/* Flip comment icons */

.add-comment, .edit-comment {
    transform: scaleX(-1);
}

#dropdownMenuButton {
    max-width: 350px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.dropdown-menu-dark {
    max-height: 300px;
    overflow: auto;
}


/* ============ desktop view ============ */
@media all and (min-width: 768px) {
    .dropdown-menu li {
        position: relative;
    }
    ul ul > li:hover {
        background-color: #f1f1f1
    }
    .dropdown-menu > li:hover > .submenu {
        display: block;
    }

    #primary_nav_wrap ul ul {
        visibility: hidden;
        position: absolute;
        top: 95%;
        left: 0;
        background: #fff;
        border-radius: 5px;
        box-shadow:  2px 6px 6px rgba(0,0,0,0.4);

    }

    #primary_nav_wrap:not(:hover) ul {
        transition: all 0.4s;
        transition-delay: 1s;
    }

    #primary_nav_wrap ul ul ul {
        top: 5px;
        left: 100%
    }

    #primary_nav_wrap ul li:hover > ul {
        visibility: visible;
        transition-delay: 0s;
    }

}


/* ============ desktop view .end// ============ */

/* ============ small devices ============ */
@media (max-width: 767px) {
    .dropdown-menu:not(.dropdown-menu .dropdown-menu) {
        max-height: 300px;
        overflow: auto;
    }

    .dropdown-menu > li > .submenu {
        display: block;
    }

    .dropdown-menu .dropdown-menu {
        margin-left: 0.7rem;
        margin-right: 0.7rem;
        margin-bottom: .5rem;
    }
}

/* ============ small devices .end// ============ */

